On small screens reloading was no longer possible, now it works, scroll listr adjusted and loadAllPokemon function with isLoading true and flase improved

--- a/style.css
+++ b/style.css
@@ -61,7 +61,6 @@ html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgba(255, 255, 255, 0.8);
   padding: 30px;
   border-radius: 10px;
   z-index: 1000;
